implementation/dotnet/deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datagovernance
  labels:
    name: datagovernance
    environment: production
